# voca

./: .gitmodules  install-system-libs.sh  pyproject.toml  requirements.txt
utils/: audio_handler.py  inference.py  rendering.py
