[tool.poetry]
name = "voca"
version = "0.1.0"
description = ""
authors = ["Sourabh Desai <sourabhdesai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pip = "^23.0.1"
opencv-python = "^4.7.0.72"
tensorflow-cpu = "^2.11.0"
resampy = "^0.4.2"
numpy = "1.23.5"
mesh = {path = "mesh", develop = true}
python-speech-features = "^0.6"
pyrender = "0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
